--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -16,45 +16,45 @@ mixin footer()
               span.block-title
                 | Навигация
             li.footer__list-item
-              a.footer__link(href="/mock-adress/")
+              a.footer__link(href="/mock-address/")
                 | О нас
             li.footer__list-item
-              a.footer__link(href="/mock-adress/")
+              a.footer__link(href="/mock-address/")
                 | Новости
             li.footer__list-item
-              a.footer__link(href="/mock-adress/")
+              a.footer__link(href="/mock-address/")
                 | Служба поддержки
             li.footer__list-item
-              a.footer__link(href="/mock-adress/")
+              a.footer__link(href="/mock-address/")
                 | Услуги
         ul.footer__list
           li.footer__list-item
             span.block-title
               | О нас
           li.footer__list-item
-            a.footer__link(href="/mock-adress/")
+            a.footer__link(href="/mock-address/")
               | О сервисе
           li.footer__list-item
-            a.footer__link(href="/mock-adress/")
+            a.footer__link(href="/mock-address/")
               | Наша команда
           li.footer__list-item
-            a.footer__link(href="/mock-adress/")
+            a.footer__link(href="/mock-address/")
               | Вакансии
           li.footer__list-item
-            a.footer__link(href="/mock-adress/")
+            a.footer__link(href="/mock-address/")
               | Инвесторы    
         ul.footer__list
           li.footer__list-item
             span.block-title
               | Служба поддержки
           li.footer__list-item
-            a.footer__link(href="/mock-adress/")
+            a.footer__link(href="/mock-address/")
               | Соглашения
           li.footer__list-item
-            a.footer__link(href="/mock-adress/")
+            a.footer__link(href="/mock-address/")
               | Сообщества
           li.footer__list-item
-            a.footer__link(href="/mock-adress/")
+            a.footer__link(href="/mock-address/")
               | Связь с нами 
         .footer__subscribe
           span.block-title.footer__subscribe-title
@@ -69,13 +69,13 @@ mixin footer()
           span.footer__copyright
             | Copyright © 2018 Toxin отель. Все права зачищены.
           .footer__social(aria-label="Социальные сети")
-            a(href="/mock-adress/" target="_blank" rel="noreferrer noopener").footer__social-link
+            a(href="/mock-address/" target="_blank" rel="noreferrer noopener").footer__social-link
               svg.footer__soc-icon
                 use(xlink:href="#twitter")
-            a(href="/mock-adress/" target="_blank" rel="noreferrer noopener").footer__social-link
+            a(href="/mock-address/" target="_blank" rel="noreferrer noopener").footer__social-link
               svg.footer__soc-icon
                 use(xlink:href="#facebook")
-            a(href="/mock-adress/" target="_blank" rel="noreferrer noopener").footer__social-link
+            a(href="/mock-address/" target="_blank" rel="noreferrer noopener").footer__social-link
               svg.footer__soc-icon
                 use(xlink:href="#inst")
 
