--- a/src/pages/registration-page/registration-page.pug
+++ b/src/pages/registration-page/registration-page.pug
@@ -7,7 +7,7 @@ include ../../components/toggle-buttons/toggle-buttons
 include ../../components/subscription/subscription
 include ../../components/textField/textField
 include ../../components/radio-buttons/radio-buttons
-include ../../components/card-checkin/card-checkin
+include ../../components/card-check-in/card-check-in
 include ../../components/date-dropdown/date-dropdown
 include ../../components/dropdown-choose/dropdown-choose
 
@@ -23,7 +23,7 @@ block content
     .registration-page
       .container
         main.registration-page__main
-          +card-checkin()
+          +card-check-in()
   +footer()
 
 
