--- a/src/pages/sign-in-page/sign-in-page.pug
+++ b/src/pages/sign-in-page/sign-in-page.pug
@@ -5,7 +5,7 @@ include ../../components/footer/footer
 include ../../components/subscription/subscription
 include ../../components/textField/textField
 include ../../components/radio-buttons/radio-buttons
-include ../../components/card-signin/card-signin
+include ../../components/card-sign-in/card-sign-in
 include ../../components/date-dropdown/date-dropdown
 include ../../components/dropdown-choose/dropdown-choose
 
@@ -21,7 +21,7 @@ block content
     .sign-in-page
       .container
         main.sign-in-page__main
-          +card-singin()
+          +card-sing-in()
   +footer()
 
 
