--- a/src/components/rich-list/rich-list.scss
+++ b/src/components/rich-list/rich-list.scss
@@ -2,6 +2,7 @@
   display: block;
   max-width: 266px;
   user-select: none;
+  line-height: 1.2;
   cursor: pointer;
   &__li {
     margin-bottom: 10px;
