moved function declaration to methods #13

--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -93,7 +93,7 @@ block content
                 number: 888,
                 type: 'люкс',
                 priceForOneDay: '9 990',
-                discont: '2 179',
+                discount: '2 179',
                 taxes: ['1 000', '300']
               })
 
