--- a/src/components/card-book/card-book.pug
+++ b/src/components/card-book/card-book.pug
@@ -1,16 +1,17 @@
 mixin card-book(details)
+  -var {number, type, priceForOneDay, discount, taxes} = details
   .card-book.js-card-book
     .card-book__content
       .card-book__head
         span.card-book__number
           | № 
           span.card-book__head-num
-            | #{details.number}
+            | #{number}
           span.card-book__type
-            | #{details.type} 
+            | #{type} 
         span.card-book__head-price
           span.card-book__head-sum
-            | #{details.priceForOneDay}₽ 
+            | #{priceForOneDay}₽ 
           | в сутки
       .card-book__block
         +date-dropdown({
@@ -28,7 +29,7 @@ mixin card-book(details)
         .card-book__calculation
           .card-book__calc-item
             span.card-book__price-for-one-day.js-card-book__price-for-one-day
-              | #{details.priceForOneDay}₽ х 
+              | #{priceForOneDay}₽ х 
               span.card-book__days.js-card-book__days
                 | 0 суток
             span.card-book__calc-sum.js-card-book__clean-sum
@@ -39,13 +40,13 @@ mixin card-book(details)
             span.card-book__calc-option
               | Сбор за услуги: 
               span.card-book__discount.js-card-book__discount
-                | скидка #{details.discount}
+                | скидка #{discount}
                 span.card-book__rub
                   | ₽
             span.card-book__calc-info
               | i
             span.card-book__tax.js-card-book__tax
-              | #{details.taxes[0]}
+              | #{taxes[0]}
               span.card-book__rub
               | ₽
           .card-book__calc-item
@@ -55,7 +56,7 @@ mixin card-book(details)
             span.card-book__calc-info
               | i
             span.card-book__tax.js-card-book__tax
-              | #{details.taxes[1]}₽
+              | #{taxes[1]}₽
         .card-book__calc-total
           span.card-book__total
             | Итого 
