--- a/src/components/checkbox-buttons/checkbox-buttons.pug
+++ b/src/components/checkbox-buttons/checkbox-buttons.pug
@@ -1,19 +1,9 @@
-mixin checkbox-buttons({title})
+mixin checkbox-buttons({title, items})
   .checkbox-buttons
     span.block-title.block-title_margin-b-16 #{title}
-    label.checkbox-buttons__item
-      input(type="checkbox").checkbox-buttons__checkbox
-      span.checkbox-buttons__custom-checkbox(tabindex='0')
-      span.checkbox-buttons__text
-        | Можно курить
-    label.checkbox-buttons__item
-      input(type="checkbox").checkbox-buttons__checkbox
-      span.checkbox-buttons__custom-checkbox(tabindex='0') 
-      span.checkbox-buttons__text
-        | Можно с питомцами
-    label.checkbox-buttons__item
-      input(type="checkbox").checkbox-buttons__checkbox
-      span.checkbox-buttons__custom-checkbox(tabindex='0') 
-      span.checkbox-buttons__text
-        |Можно пригласить гостей
-        |(до 10 человек)
+    each val in items
+      label.checkbox-buttons__item
+        input(type="checkbox").checkbox-buttons__checkbox
+        span.checkbox-buttons__custom-checkbox(tabindex='0')
+        span.checkbox-buttons__text
+          | #{val}
