--- a/src/components/rich-list/rich-list.pug
+++ b/src/components/rich-list/rich-list.pug
@@ -1,24 +1,14 @@
-mixin rich-list({title}) 
+mixin rich-list({title, items}) 
   .rich-list
     span.block-title.block-title_margin-b-16 #{title}
     ul.rich-list__ul
-      li.rich-list__li
-        label.rich-list__item
-          input(type="checkbox").rich-list__checkbox
-          span.rich-list__custom-checkbox(tabindex='0') 
-          span.rich-list__text 
-            span.rich-list__head Широкий коридор
-            br
-            span.rich-list__description
-              | Ширина коридоров в номере 
-              | не менее 91 см.
-      li.rich-list__li
-        label.rich-list__item
-          input(type="checkbox").rich-list__checkbox
-          span.rich-list__custom-checkbox(tabindex='0') 
-          div.rich-list__text 
-            span.rich-list__head Помощник для инвалидов
-            br
-            span.rich-list__description
-              | На 1 этаже вас встретит специалист 
-              | и проводит до номера.
+      each val in items
+        li.rich-list__li
+          label.rich-list__item
+            input(type="checkbox").rich-list__checkbox
+            span.rich-list__custom-checkbox(tabindex='0') 
+            span.rich-list__text 
+              span.rich-list__head #{val.title}
+              br
+              span.rich-list__description
+                | #{val.description}
