#24 changed path for img, looks like ubuntu sense to register image's path, but windows is not

--- a/src/components/rich-list/rich-list.scss
+++ b/src/components/rich-list/rich-list.scss
@@ -52,7 +52,7 @@
   }
   input:checked + span {
     border-color: $primary-color;
-    background-image: url('./assets/img/Vector.jpg');
+    background-image: url('./assets/img/vector.jpg');
     background-repeat: no-repeat;
     background-position: 50% 50%;
   }
