--- a/src/components/expand-list/expand-list.scss
+++ b/src/components/expand-list/expand-list.scss
@@ -91,7 +91,7 @@
   }
   &__checkbox:checked + span {
     border-color: $primary-color;
-    background-image: url('./assets/img/Vector.jpg');
+    background-image: url('./assets/img/vector.jpg');
     background-repeat: no-repeat;
     background-position: 50% 50%;
   }
