fixed pp for header

--- a/src/components/card-check-in/card-check-in.scss
+++ b/src/components/card-check-in/card-check-in.scss
@@ -24,6 +24,9 @@
     &_margin-b-10 {
       margin-bottom: 10px;
     }
+    &_margin-b-16 {
+      margin-bottom: 16px;
+    }
     &_margin-b-25 {
       margin-bottom: 25px;
     }
