--- a/src/components/card-selection/card-selection.pug
+++ b/src/components/card-selection/card-selection.pug
@@ -17,4 +17,4 @@ mixin card-selection()
             h4.block-title
               | Гости
             +dropdown-choose({className: 'js-dropdown-guests', title:'Гости'})
-          button(type="submit").button.button_big перейти к оплате
+          button(type="submit").button.button_big подобрать номер
