--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -11,6 +11,8 @@ block content
   .container
     ul(class='index__list')
       li(class='index__list-item')
+        a(href='/form-elements.html' class='index__link') form-elements
+      li(class='index__list-item')
         a(href='/landing-page.html' class='index__link') landing page
       li(class='index__list-item')
         a(href='/headers-&-footers.html' class='index__link') headers and footers
