fixed pixel perfect for footer

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -12,8 +12,7 @@ mixin footer()
             | ассоциации «Отельные взгляды»
         nav.footer__nav
           ul.footer__list
-            li.footer__list-item
-              span.block-title
+            span.block-title.footer__list-title
                 | Навигация
             li.footer__list-item
               a.footer__link(href="/mock-address/")
@@ -27,35 +26,33 @@ mixin footer()
             li.footer__list-item
               a.footer__link(href="/mock-address/")
                 | Услуги
-        ul.footer__list
-          li.footer__list-item
-            span.block-title
-              | О нас
-          li.footer__list-item
-            a.footer__link(href="/mock-address/")
-              | О сервисе
-          li.footer__list-item
-            a.footer__link(href="/mock-address/")
-              | Наша команда
-          li.footer__list-item
-            a.footer__link(href="/mock-address/")
-              | Вакансии
-          li.footer__list-item
-            a.footer__link(href="/mock-address/")
-              | Инвесторы    
-        ul.footer__list
-          li.footer__list-item
-            span.block-title
+          ul.footer__list
+            span.block-title.footer__list-title
+                  | О нас
+            li.footer__list-item
+              a.footer__link(href="/mock-address/")
+                | О сервисе
+            li.footer__list-item
+              a.footer__link(href="/mock-address/")
+                | Наша команда
+            li.footer__list-item
+              a.footer__link(href="/mock-address/")
+                | Вакансии
+            li.footer__list-item
+              a.footer__link(href="/mock-address/")
+                | Инвесторы    
+          ul.footer__list
+            span.block-title.footer__list-title
               | Служба поддержки
-          li.footer__list-item
-            a.footer__link(href="/mock-address/")
-              | Соглашения
-          li.footer__list-item
-            a.footer__link(href="/mock-address/")
-              | Сообщества
-          li.footer__list-item
-            a.footer__link(href="/mock-address/")
-              | Связь с нами 
+            li.footer__list-item
+              a.footer__link(href="/mock-address/")
+                | Соглашения
+            li.footer__list-item
+              a.footer__link(href="/mock-address/")
+                | Сообщества
+            li.footer__list-item
+              a.footer__link(href="/mock-address/")
+                | Связь с нами 
         .footer__subscribe
           span.block-title.footer__subscribe-title
             | Подписка
