--- a/src/utils/utils-scss/button.scss
+++ b/src/utils/utils-scss/button.scss
@@ -49,6 +49,9 @@
       min-height: 100%;
     }
   }
+  &_bigger {
+    padding: 15px 26px;
+  }
   &_white {
     display: inline-flex;
     align-items: center;
