--- a/src/components/card-check-in/card-check-in.scss
+++ b/src/components/card-check-in/card-check-in.scss
@@ -5,6 +5,10 @@
   border-radius: 4px;
   border: 1px solid rgba(0, 0, 0, 0.12);
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
+  margin-left: 5px;
+  @media screen and (max-width: $md-desktop-width) {
+    margin-left: 0;
+  }
   &__content {
     padding: 40px 30px 30px 30px;
   }
@@ -23,6 +27,9 @@
   &__item {
     &_margin-b-10 {
       margin-bottom: 10px;
+    }
+    &_margin-b-14 {
+      margin-bottom: 14px;
     }
     &_margin-b-16 {
       margin-bottom: 16px;
