--- a/src/pages/sign-in-page/sign-in-page.scss
+++ b/src/pages/sign-in-page/sign-in-page.scss
@@ -5,7 +5,7 @@
   background-origin: content-box;
   background-position: center;
   &__main {
-    padding: 163px 0;
+    padding: 171px 0 173px 0;
     display: flex;
     justify-content: center;
   }
