fixed pp for filter rooms page

--- a/src/components/rich-list/rich-list.pug
+++ b/src/components/rich-list/rich-list.pug
@@ -10,5 +10,5 @@ mixin rich-list({title, items})
             span.rich-list__text 
               span.rich-list__head #{val.title}
               br
-              span.rich-list__description
+              p.rich-list__description
                 | #{val.description}
