--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -24,3 +24,5 @@ block content
         a(href='/sign-in-page.html' class='index__link') sign in page
       li(class='index__list-item')
         a(href='/filter-page.html' class='index__link') filter page
+      li(class='index__list-item')
+        a(href='/cards-page.html' class='index__link') cards page
