--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -74,7 +74,7 @@
     }
   }
   &__content {
-    padding: 20px 17px 19px 20px;
+    padding: 23px 16px 19px 20px;
   }
   &__head {
     display: flex;
@@ -86,16 +86,18 @@
     line-height: 17px;
     padding-bottom: 12px;
     border-bottom: 1px solid rgba(31, 32, 65, 0.1);
-    margin-bottom: 12px;
+    margin-bottom: 6px;
   }
   &__number {
     font-size: 14px;
   }
   &__head-num {
-    font-size: 14px;
-    line-height: 23px;
+    font-size: 19px;
+    line-height: 17px;
+    display: inline-block;
+    margin-right: 8px;
     @media (max-width: $phone-width) {
-      font-size: 12px;
+      font-size: 14px;
       line-height: 18px;
     }
   }
@@ -129,7 +131,7 @@
   &__bottom {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
   }
   &__reviews {
     font-size: 14px;
