--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -2,6 +2,12 @@
   padding: 0;
   margin-bottom: 10px;
 }
+.pagination-wrap {
+  margin-right: 13px;
+  @media screen and (max-width: $sm-desktop-width) {
+    margin-right: 0;
+  }
+}
 .pagination.simple-pagination {
   padding: 0;
   margin: 0;
