--- a/src/components/rich-list/rich-list.scss
+++ b/src/components/rich-list/rich-list.scss
@@ -5,7 +5,7 @@
   line-height: 1.2;
   cursor: pointer;
   &__li {
-    margin-bottom: 10px;
+    margin-bottom: 7px;
     &:last-child {
       margin-bottom: 0;
     }
@@ -29,10 +29,11 @@
     font-family: $font-family-primary;
     font-weight: $bold;
     color: $text-color-brightness-75;
-    text-transform: uppercase;
-    font-size: 12px;
+    font-size: 14px;
     white-space: pre;
     line-height: 18px;
+    display: inline-block;
+    margin-bottom: 5px;
     @media (max-width: $phone-width) {
       font-size: 10px;
     }
