--- a/src/pages/filter-page/filter-page.scss
+++ b/src/pages/filter-page/filter-page.scss
@@ -17,6 +17,7 @@
     }
   }
   &__form {
+    // padding-top: 10px;
     max-width: 266px;
     margin-right: 60px;
   }
@@ -24,11 +25,16 @@
     min-width: 100%;
   }
   &__form-block {
+    display: flex;
+    flex-direction: column;
     &_margin-20 {
-      margin-bottom: 15px;
+      margin-bottom: 20px;
     }
     &_margin-30 {
-      margin-bottom: 28px;
+      margin-bottom: 30px;
+    }
+    &_margin-25 {
+      margin-bottom: 25px;
     }
   }
   &__range-description {
@@ -54,7 +60,7 @@
   &__rooms {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-row-gap: 20px;
+    grid-row-gap: 22px;
     grid-column-gap: 12px;
     @media (max-width: $md-desktop-width) {
       grid-template-columns: 1fr 1fr;
