pp is fixed complete

--- a/src/components/card-book/card-book.pug
+++ b/src/components/card-book/card-book.pug
@@ -51,8 +51,7 @@ mixin card-book(details)
               | ₽
           .card-book__calc-item
             span.card-book__calc-option
-              | Сбор за дополнительные 
-              | услуги
+              | Сбор за доп. услуги
             span.card-book__calc-info
               | i
             span.card-book__tax.js-card-book__tax
