--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -59,19 +59,19 @@ block content
                   +circle-diagram({
                     voices: [
                        {
-                        grade: 'великолепно',
+                        grade: 'Великолепно',
                         num: 130
                       },
                       {
-                        grade: 'хорошо',
+                        grade: 'Хорошо',
                         num: 65
                       },
                        {
-                        grade: 'удовлетворительно',
+                        grade: 'Удовлетворительно',
                         num: 65
                       },
                        {
-                        grade: 'разочарован',
+                        grade: 'Разочарован',
                         num: 0
                       },
                     ]
