--- a/src/components/circle-diagram/circle-diagram.scss
+++ b/src/components/circle-diagram/circle-diagram.scss
@@ -4,9 +4,13 @@
   @media (max-width: $table-width) {
     display: block;
   }
+  @media (max-width: $phone-width) {
+    display: flex;
+    align-items: center;
+  }
   &__container {
-    width: 135px;
-    height: 135px;
+    width: 126px;
+    height: 125px;
     position: relative;
     display: flex;
     justify-content: center;
@@ -15,11 +19,13 @@
   &__wrapper {
     position: absolute;
     z-index: 10;
-    width: 135px;
-    height: 135px;
+    width: 125px;
+    height: 124px;
   }
   &__voices {
-    position: absolute;
+    position: relative;
+    top: -9px;
+    left: -2px;
     white-space: pre-wrap;
     text-align: center;
     max-width: 70px;
@@ -38,7 +44,7 @@
   &__list {
     display: block;
     max-width: 180px;
-    margin-left: 20px;
+    margin-left: 26px;
     font-size: 14px;
     line-height: 24px;
     color: $text-color-brightness-75;
