--- a/src/pages/filter-page/filter-page.scss
+++ b/src/pages/filter-page/filter-page.scss
@@ -6,7 +6,7 @@
     border-bottom: 1px solid rgba(31, 32, 65, 0.25);
   }
   &__content {
-    padding: 30px 0 70px;
+    padding-top: 30px;
     display: flex;
     justify-content: center;
 
